--- a/modulo5/5.2-Funções_Customizadas_Lambda-Exercícios.ipynb
+++ b/modulo5/5.2-Funções_Customizadas_Lambda-Exercícios.ipynb
@@ -447,7 +447,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Escreva aqui o programa principal \n"
+    "## Escreva aqui o programa principal \n",
+    "\n",
+    "opt = int(input(\"Opções: (1) maior ou (2) menor?: \"))\n",
+    "\n",
+    "if opt == 1:\n",
+    "    maior = int(input()) #primeiro dígito\n",
+    "    while True:\n",
+    "        n = int(input())\n",
+    "        if n == 0:\n",
+    "            n = maior\n",
+    "            print(f'O maior é: {n}')\n",
+    "            break\n",
+    "        n = (lambda n, maior: n if n > maior else maior)(n,maior)\n",
+    "        maior = n\n",
+    "elif opt == 2:\n",
+    "    menor = int(input()) #primeiro dígito\n",
+    "    while True:\n",
+    "        n = int(input())\n",
+    "        if n == 0:\n",
+    "            n = menor\n",
+    "            print(f'O menor é: {n}')\n",
+    "            break\n",
+    "        n = (lambda n, menor: n if n < menor else menor)(n,menor)\n",
+    "        menor = n\n",
+    "\n"
    ]
   }
  ],
